fix: late initial render of dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,10 @@
   scroll-behavior: smooth;
 }
 
+html {
+  visibility: hidden;
+}
+
 body {
   margin: 0;
   background-color: #fafafa;
